# lab_dispatcher

./: .env_template  .gitignore  Dockerfile  README.md  compose.yaml  justfile  pyproject.toml
cloud_function/: README.md  justfile  main.py  pyproject.toml  requirements.txt
doc/: overview.excalidraw
homelab_api/: Dockerfile  justfile  pyproject.toml
homelab_api/src/: config.py  main.py
pubsub_listener/: Dockerfile  justfile  pyproject.toml
pubsub_listener/src/: main.py
src/: main.py
web/: caddyfile  index.html.template  justfile  op.env
